		Change List:
			* Initial changes.
			* Reestructurig Natural Disaster Overhaul Code.
			* Including Raganaroks functionalities.
			* Setup panel functionalities Added.
			* Improved Evacuation Method included.
			* Adding Functionalities for button and panel info to be placed anywhere.
			* Released as Beta for Community
				
	Version: 1.1		
		Release Date (YYYY-MM-dd): 2023-05-06
		Change List:
		 * Added reset button/panel position.
		 * Icon size changed and icon modiffied.
		 * Settings panel organization changed.
		 * New property to enable/disable tornado destruction included.
		 * Disaster name identifier moved to common properties class instead of static string,
		 * Enable/disable disaster option created to be used from in-game panel (not shown yet)
		 * Settings notification for hotkey to display/hide information panel
		 * Meteor Period/intensity changed
			** 9 Years moved from 10 to 19 intensity
			** 5 Years moved from 7 to 12 intensity
	Version: 1.2
		Release Date (YYYY-MM-dd): 2023-05-21
		Change List:
		 * Added constant for debugging (new line)
		 * Fixed tooltip to show intensity and probabiilty value
		 * Fixed propability/intensity calculations
		 * Set value for max population to trigger higher disasters from settings menu.
		 * Disable/enable disasters from information Panel.
		 * Mod description updated, small spelling fixes in text descriptions

	Version: 1.2.1
		Release Date (YYYY-MM-dd): 2023-05-22
		Change List:
		 * Fixed issue with probabilities found during extra testing.
		 * Fixed tooltip values when mouse over disaster probability bar.

	Version: 1.2.2
		Release Date (YYYY-MM-dd): 2023-05-23
		Change List:
		 * Assembly information updated.
		 * Mod validation for new DLC "Hotels and Retreats" (Version: 1.17.0-f3).

	Version: 1.2.3
		Release Date (YYYY-MM-dd): 2023-06-01
		Change List:
		 * Fix for issue on parameter for meteor strike

	Version: 1.x
		Release Date (YYYY-MM-dd): ...
		Change List:
		 * ...
		 * ...